3-column-preview-card-component-main/styles/input.less
html {
    height: 100%;
}
body {
    box-sizing: border-box;
    margin: 0;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: hsl(0, 0%, 95%);
}
.card {
    display: flex;
    flex-direction: column;
    width: 20rem;
    color: hsla(0, 0%, 100%, 0.75);
    margin: 4rem 0;
    border-radius: 0.5rem;
    overflow: hidden;
    font-size: 0.9375rem;
    font-family: 'Lexend Deca', sans-serif;
    line-height: 1.8;
    div {
        padding: 3rem;
    }
    img {
        width: 3rem;
        height: 2rem;
    }
    h1 {
        color: hsl(0, 0%, 95%);
        font-family: 'Big Shoulders Display', cursive;
        text-transform: uppercase;
    }
    p {
        margin: 0;
    }
    button {
        border: 0.0625rem solid transparent;
        border-radius: 1.625rem;
        padding: 1rem;
        background-color: hsl(0, 0%, 95%);
        width: 8.75rem;
        margin-top: 0.75rem;
        cursor: pointer;
        &:hover {
            background-color: transparent;
            border-color: hsl(0, 0%, 95%);
            color: hsl(0, 0%, 95%);
        }
    }
}

.sedans {
    background-color: hsl(31, 77%, 52%);
    button {
        color: hsl(31, 77%, 52%); 
    }
}
.suvs {
    background-color: hsl(184, 100%, 22%);
    button {
        color: hsl(184, 100%, 22%); 
    }
}
.luxury {
    background-color: hsl(179, 100%, 13%);
    button {
        color: hsl(179, 100%, 13%); 
    }
}
.attribution {
    font-size: 0.75rem;
    text-align: center;
    padding: 1rem;
    a {
        color: hsl(228, 45%, 44%);
    }
}

// Media Queries
@media (min-width: 1440px) {
    .card {
        width: 57rem;
        height: 30rem;
        flex-direction: row;
        button {
            margin-top: 3.75rem;
        }
    }
}

